@@ -1,0 +1,11 @@
+#X:1100-1400
+X	1000	1100	X1	500	+	1000	1100	255,0,0
+X	1200	1300	X2	500	+	1200	1300	255,0,0
+#Y:100000-100550
+Y	100000	100900	Y1	600	+	100000	100900	255,0,0
+Y	100200	100700	Y2	600	+	100200	100700	255,0,0
+Y	100400	100500	Y3	600	+	100400	100500	255,0,0
+#Z:100000-100005
+Z	100000	100001	Z1	600	+	100000	100001	255,0,0
+Z	100002	100003	Z2	600	+	100002	100003	255,0,0
+Z	100004	100005	Z3	600	+	100004	100005	255,0,0
